# uwh-refbox-rs

./: .gitignore  .travis.yml  Analyzed_workspace_and_ran_refbox__2025-08-17T03-36-26.md  Atlantis UWH-REFBOX-RS Automated Testing Design.html  Atlantis UWH-REFBOX-RS Automated Testing Design.md  Atlantis UWH-REFBOX-RS Automated Testing Design_PROGRESS.html  Atlantis UWH-REFBOX-RS Detailed Design.html  Atlantis UWH-REFBOX-RS Detailed Design.md  CLAUDE.md  COMMIT_SUMMARY.md  Cargo.toml  Cross.toml  Dockerfile.aarch64-unknown-linux-gnu  Justfile  LICENSE.txt  README.md  TEXT_DISPLAY_IMPROVEMENTS.md  UWH_RefBox_Agent_Interaction_Summary.md  bors.toml  run_font_demo.bat  run_font_tests.bat  updated_commit_summary.html  updated_text_display_improvements.html
alphagen/: Cargo.toml  readme.md
alphagen/src/: lib.rs  main.rs
integration-tests/: Cargo.toml
integration-tests/scripts/: README.md  run_font_demo.bat  run_refbox_tests.bat  run_refbox_tests_fixed.ps1  test_font_sizing.ps1
integration-tests/src/: lib.rs
integration-tests/src/integration/: config_tests.rs  mod.rs  tournament_manager_tests.rs
integration-tests/src/ui_tests/: mod.rs
integration-tests/src/ui_tests/internationalization/: language_tests.rs  layout_consistency_tests.rs  mod.rs
integration-tests/src/utils/: layout_assertions.rs  mock_data.rs  mod.rs  test_helpers.rs
integration-tests/src/visual_regression/: layout_validation.rs  mod.rs  snapshot_tests.rs
integration-tests/tests/: full_app_tests.rs  ui_integration.rs
led-panel-sim/: Cargo.toml
led-panel-sim/src/: lib.rs  main.rs  test.rs
matrix-drawing/: Cargo.toml
matrix-drawing/src/: drawing.rs  transmitted_data.rs
overlay/: Cargo.toml
overlay/assets/color/1080/: 415x415dd
overlay/generate-alpha-images/: Cargo.toml
overlay/generate-alpha-images/src/: main.rs
overlay/src/: flag.rs  load_images.rs  main.rs  network.rs
overlay/src/pages/: final_scores.rs  in_game.rs  mod.rs  next_game.rs  overtime_and_sudden_death.rs  pre_game.rs  roster.rs
overlay/test_server/: main.py
refbox/: CLAUDE.md  Cargo.toml  build.rs  i18n.toml
refbox/resources/: ref-warn.aup3  whoop.aup3
refbox/resources/sounds/: airhorn.raw  beep.aup3  buzz.raw  countdown.raw  crazy.raw  klaxon.raw  pip.raw  pipes.raw  pulse.raw  ref-alert-1.raw  ref-alert-2.raw  ref-warn-1.aup3  ref-warn-2.aup3  regen-buzzer-sounds.py  regen-countdown-beep.py  siren.raw  trill.raw  whistle-0.raw  whistle.aup3  whistle.raw
refbox/src/: config.rs  main.rs  penalty_editor.rs  sim_frame.rs  sound.rs  tournament_manager.rs
refbox/src/app/: dynamic_font_sizing.rs  languages.rs  message.rs  mod.rs  style.rs  update_sender.rs  view_builders.rs  view_data.rs
refbox/src/beep_test/: cadence.rs  mod.rs  snapshot.rs
refbox/src/portal_manager/: health.rs  link_session.rs  mod.rs  queue.rs
refbox/src/sim_app/: capture.rs  mod.rs  scoreboard.rs
refbox/src/sound_controller/: mod.rs  sounds.rs
refbox/src/tournament_manager/: game_stats.rs  infraction.rs  mod.rs  penalty.rs
refbox/src/updater/: marker.rs  mod.rs  net.rs  release.rs  swap.rs  verify.rs  version.rs
refbox/test_data/: font_sizing_test_data.csv
refbox/tests/features/: README.md  adr_009_settings.feature  button-damage-tracking.feature  confirm_score_timing.feature  keypad-player-number.feature  language-restart-flow.feature  language-selection-page.feature  language-ui-chrome.feature  language-unverified-marker.feature  manual_alarm.feature  multi-label-button-text.feature  portal-health.feature  referee_names.feature  timed-buzzer-playback.feature
refbox/translations/de/: refbox.ftl
refbox/translations/de-DE/: refbox.ftl
refbox/translations/en-US/: refbox.ftl
refbox/translations/es/: refbox.ftl
refbox/translations/fr/: refbox.ftl
refbox/translations/id-ID/: refbox.ftl
refbox/translations/it-IT/: refbox.ftl
refbox/translations/ja-JP/: refbox.ftl
refbox/translations/ko-KR/: refbox.ftl
refbox/translations/ms-MY/: refbox.ftl
refbox/translations/nl-NL/: refbox.ftl
refbox/translations/pt-PT/: refbox.ftl
refbox/translations/th-TH/: refbox.ftl
refbox/translations/tl-PH/: refbox.ftl
refbox/translations/tr-TR/: refbox.ftl
refbox/translations/zh-CN/: refbox.ftl
schedule-processor/: CLAUDE.md  Cargo.toml
schedule-processor/Mock Schedules for testing/: 2025 3x3 Tournament Organization Tool - UWHPortal (12).csv
schedule-processor/src/: csv_parser.rs  lib.rs  main.rs  schedule_checks.rs  scoresheets.rs
schedule-processor/tests/: scoresheets_integration.rs
uwh-common/: CLAUDE.md  Cargo.toml  build.rs
uwh-common/src/: bundles.rs  color.rs  config.rs  game_snapshot.rs  lib.rs  snapshot.proto  uwhportal.rs  uwhscores.rs  wire_format.md
uwh-common/src/uwhportal/: mod.rs  schedule.rs
uwh-matrix-drawing/: Cargo.toml
uwh-matrix-drawing/src/: drawing.rs  lib.rs  main.rs  transmitted_data.rs
uwh-overlay-drawing/: Cargo.toml
uwh-overlay-drawing/flo-implementation/: Cargo.toml
uwh-overlay-drawing/flo-implementation/src/: load_images.rs  main.rs  network.rs  pages.rs
uwh-overlay-drawing/generate-alpha-images/src/: main.rs
uwh-overlay-drawing/src/: flag.rs  load_images.rs  main.rs  network.rs  pages.rs  pages_alpha.rs  pages_color.rs  render.rs
uwh-overlay-drawing/src/pages/: final_scores.rs  in_game.rs  mod.rs  next_game.rs  overtime.rs  overtime_and_sudden_death.rs  pre_game.rs  roster.rs
uwh-refbox/: Cargo.toml  build.rs
uwh-refbox/src/: app.rs  config.rs  css.rs  drawing.rs  game_snapshot.rs  game_state.rs  lib.rs  main.rs  old_main.rs  penalty_editor.rs  style.css  style.rs  tournament_manager.rs  uwhscores.rs
uwh-refbox/src/app/: mod.rs  style.rs  update_sender.rs  view_builders.rs
uwh-refbox/src/sim_app/: display_simulator.rs  mod.rs
wireless-remote/: .gitignore  Cargo.toml
wireless-remote/.cargo/: config.toml
wireless-remote/builds/: add-button-20250422.uf2  avoid-overlap-20250521.uf2  button-no-lights-20250423.uf2  prototype-20241127.uf2  prototype-20241204.uf2  prototype-20241205.uf2  regions-20250526.uf2  unique-id-20250520.uf2
wireless-remote/src/: main.rs
(+351 files in other folders)
