[package]
name = "alphagen"
version = "0.1.0"
edition = "2021"
description = "Used to generate greyscale mask images based on the alpha channel of an image"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.0", features = ["derive"] }
image = "0.24.6"
log = "0.4.18"
pretty_env_logger = "0.5.0"
rayon = "*"

[lib]
name = "alphagen"
