[package]
name = "integration-tests"
version = "0.1.0"
edition = "2024"

[dependencies]
iced_core = "0.13"
uwh-common = { path = "../uwh-common" }
pretty_assertions = "1.4"
assert_matches = "1.5"
env_logger = { version = "0.11", default-features = false }
tokio = { version = "1", features = ["time"] }
serde_json = "1"
