[package]
name = "overlay"
version = "0.2.1"
edition = "2024"
rust-version = "1.85"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.23", features = ["derive"] }
futures = "0.3"
coarsetime = "0.1.35"
confy = "0.6"
crossbeam-channel = "0.5.14"
directories = "6.0.0"
log = "0.4.22"
log-panics = { version = "2", features = ["with-backtrace"]}
log4rs = { version = "1", default-features = false, features = ["background_rotation", "compound_policy", "console_appender", "fixed_window_roller", "gzip", "pattern_encoder", "rolling_file_appender", "size_trigger"]}
macroquad = { version = "0.4", default-features = false }
reqwest = {version = "0.12", features = ["gzip"]}
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
tokio = { version = "1.42", features = ["full"] }
uwh-common = { path = "../uwh-common/" }
bytes = "1.9.0"
alphagen = {path="../alphagen"}
image = { version = "0.24", default-features = false, features = ["png", "jpeg_rayon"] }
