[package]
name = "overlay"
version = "0.3.1"
edition = "2024"
rust-version = "1.85"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
alphagen = {path="../alphagen"}
clap = { version = "4.5.39", features = ["derive"] }
coarsetime = "0.1.36"
confy = "1.0"
crossbeam-channel = "0.5.15"
directories = "6.0.0"
futures = "0.3"
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "rayon"] }
log = "0.4.27"
log-panics = { version = "2", features = ["with-backtrace"]}
log4rs = { version = "1", default-features = false, features = ["background_rotation", "compound_policy", "console_appender", "fixed_window_roller", "gzip", "pattern_encoder", "rolling_file_appender", "size_trigger"]}
macroquad = { version = "0.4", default-features = false }
reqwest = {version = "0.12", features = ["gzip"]}
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
time = { version = "0.3", features = ["local-offset", "macros", "serde", "serde-human-readable"] }
tokio = { version = "1.45", features = ["io-util", "macros", "net", "rt-multi-thread", "sync"] }
uwh-common = { path = "../uwh-common/" }
