[package]
name = "refbox"
version = "0.2.1"
description = "UI for Atlantis Sports's Underwater Hockey Refbox"
authors = ["Atlantis Sports <maintainers@atlantissports.org>"]
edition = "2024"
rust-version = "1.85"

[features]
default = []
debug = ["iced/debug"]

[dependencies]
arrayref = "0.3"
collect_array = "0.1"
clap = { version = "4", features = ["derive"] }
confy = "0.6"
conquer-once = "0.4"
derivative = "2"
directories = "6"
embedded-graphics = "0.8"
enum-derive-2018 = "3"
env_logger = "0.11"
futures-lite = "2"
iced = { version = "0.10", default-features = false, features = ["canvas", "svg", "tokio", "wgpu", "image"] }
iced_core = "0.10"
iced_futures = { version = "0.7", features = ["async-std"] }
# iced_native = "0.10"
iced_renderer = "0.1"
iced_runtime = "0.1"
log = "0.4"
log4rs = { version = "1", default-features = false, features = ["background_rotation", "compound_policy", "console_appender", "fixed_window_roller", "gzip", "pattern_encoder", "rolling_file_appender", "size_trigger"]}
log-panics = { version = "2", features = ["with-backtrace"]}
macro-attr-2018 = "3"
more-asserts = "0.3"
paste = "1"
reqwest = { version = "0.12", features = ["json"] }
serde = "1"
serde_derive = "1"
serde_json = "1"
skip_error = "3"
thiserror = "2"
time = { version = "0.3", features = ["local-offset", "macros", "serde", "serde-human-readable"] }
tokio = { version = "1", features = ["io-util", "macros", "net", "sync", "time"] }
tokio-serial = "5"
toml = "0.8"
uwh-common = { version = "0.2.1", path = "../uwh-common"}
matrix-drawing = { version = "0.2.1", path = "../matrix-drawing"}
web-audio-api = { version = "1.2", default-features = false, features = ["cpal"] }
enum-iterator = "2.1.0"

[target.'cfg(target_os = "linux")'.dependencies]
rppal = "0.22"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[package.metadata.bundle]
identifier = "com.atlantissports.uwhrefbox"
icon = ["resources/AppIcon.png"]
osx_minimum_system_version = "12"
