[package]
name = "refbox"
version = "0.3.0"
description = "UI for Atlantis Sports's Underwater Hockey Refbox"
authors = ["Atlantis Sports <maintainers@atlantissports.org>"]
edition = "2024"
rust-version = "1.85"

[features]
default = []
debug = ["iced/debug"]

[dependencies]
arrayref = "0.3"
clap = { version = "4", features = ["derive"] }
collect_array = "0.1"
confy = "0.6"
conquer-once = "0.4"
derivative = "2"
directories = "6"
dyn-clone = "1.0.19"
embedded-graphics = "0.8"
enum-derive-2018 = "3"
enum-iterator = "2.1.0"
env_logger = "0.11"
futures-lite = "2"
i18n-embed = { version = "0.15.3", features = ["fluent-system", "desktop-requester"] }
i18n-embed-fl = "0.9.3"
iced_core = "0.13"
iced_futures = { version = "0.13", features = ["async-std"] }
iced_graphics = "0.13"
iced_renderer = "0.13"
iced_runtime = "0.13"
iced_winit = "0.13"
led-panel-sim = { version = "0.3.0", path = "../led-panel-sim" }
log = "0.4"
log-panics = { version = "2", features = ["with-backtrace"]}
log4rs = { version = "1", default-features = false, features = ["background_rotation", "compound_policy", "console_appender", "fixed_window_roller", "gzip", "pattern_encoder", "rolling_file_appender", "size_trigger"]}
macro-attr-2018 = "3"
matrix-drawing = { version = "0.3.0", path = "../matrix-drawing"}
more-asserts = "0.3"
once_cell = "1.21.3"
paste = "1"
reqwest = { version = "0.12", features = ["json"] }
rust-embed = "8.7.0"
serde = "1"
serde_derive = "1"
serde_json = "1"
skip_error = "3"
thiserror = "2"
time = { version = "0.3", features = ["local-offset", "macros", "serde", "serde-human-readable"] }
tokio = { version = "1", features = ["io-util", "macros", "net", "sync", "time"] }
tokio-serial = "5"
toml = "0.8"
unic-langid = "0.9.5"
uwh-common = { version = "0.3.0", path = "../uwh-common"}
web-audio-api = { version = "1.2", default-features = false, features = ["cpal"] }

[build-dependencies]
fluent-syntax = "0.11.1"

[target.'cfg(target_os = "linux")'.dependencies]
iced = { version = "0.13", default-features = false, features = ["canvas", "image", "svg", "tokio"] }
rppal = "0.22"

[target.'cfg(not(target_os = "linux"))'.dependencies]
iced = { version = "0.13", default-features = false, features = ["canvas", "image", "svg", "tokio", "wgpu"] }

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[package.metadata.bundle]
identifier = "com.atlantissports.uwhrefbox"
icon = ["resources/AppIcon.png"]
osx_minimum_system_version = "12"
