[package]
name = "uwh-common"
version = "0.3.0"
authors = ["Atlantis Sports <maintainers@atlantissports.org>"]
edition = "2024"
rust-version = "1.85"

[features]
default = ["std"]
std = ["arrayvec/std", "displaydoc/std", "jsonwebtoken", "reqwest", "serde/std", "serde_json", "serde_with", "time", "toml"]

[dependencies]
arrayref = "0.3"
arrayvec = { version = "0.7", default-features = false, features = ["serde"] }
defmt = "1.0"
derivative = { version = "2", features = ["use_core"] }
displaydoc = { version = "0.2", default-features = false }
enum-iterator = "2"
fonts = { version = "0.3.0", path = "../fonts" }
image = "0.24"
jsonwebtoken = { version = "9.3.1", optional = true }
log = "0.4"
reqwest = { version = "0.12", optional = true, features = ["json"] }
serde = { version = "1", default-features = false, features = ["derive"] }
serde_json = { version = "1.0.135", optional = true }
serde_with = { version = "3.12.0", optional = true }
time = { version = "0.3", features = [
  "local-offset",
  "macros",
  "serde",
  "serde-human-readable",
], optional = true }
toml = { version = "0.8", optional = true }


[dev-dependencies]
env_logger = "0.11"
git2 = "0.20.1"
reqwest = { version = "0.12", features = ["blocking", "json"] }
