[package]
name = "uwh-matrix-drawing"
version = "0.1.0"
authors = ["Atlantis Sports <maintainers@atlantissports.org>"]
edition = "2021"

[features]
default = ["std"]
std = ["arrayvec/std", "clap", "embedded-graphics-simulator", "serde/std", "serde_json", "serialport", "uwh-common/std"]

[dependencies]
arrayref = "0.3.6"
arrayvec = { version = "0.7.2", default-features = false }
clap = { version = "3.1.6", features = ["derive"], optional = true }
embedded-graphics = "0.7.1"
embedded-graphics-simulator = { version = "0.3.0", optional = true }
fonts = { version = "0.1.0", path = "../fonts" }
more-asserts = "0.2"
serde = { version = "1.0", default-features = false }
serde_derive = "1.0"
serde_json = { version = "1.0", optional = true }
serialport = { version = "4.1.0", optional = true }
uwh-common = { version = "0.1.0", path = "../uwh-common", default-features = false }
