[package]
name = "overlay"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
macroquad = "0.3.23"
uwh-common = { git = "https://github.com/AtlantisSports/uwh-refbox-rs" }
serde_json = "*"
reqwest = { version = "*", features = ["blocking"] }
pollster = "*"

[workspace]
