[package]
name = "overlay"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
macroquad = "0.3.23"
uwh-common = { git = "https://github.com/AtlantisSports/uwh-refbox-rs" }
serde_json = { version = "*" }
serde = { version = "1.0.139", features = ["derive"] }
home = "0.5.3"
reqwest = { version = "*", features = ["blocking"] }
pollster = "*"
confy = { git = "https://github.com/rust-cli/confy", rev = "642822413139ce38a96b916190e8c7fd5b88e814" }

[workspace]
