[package]
name = "overlay"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
macroquad = "0.3.24"
uwh-common = { path = "../uwh-common/" }
serde_json = { version = "*" }
serde = { version = "1.0.139", features = ["derive"] }
reqwest = { version = "*", features = ["blocking"] }
tokio = {version = "*", features = ["full"]}
pollster = "*"
confy = { git = "https://github.com/rust-cli/confy", rev = "642822413139ce38a96b916190e8c7fd5b88e814" }
simple_logger = "*"
log = "*"
coarsetime = "*"
crossbeam-channel = "*"

[dependencies.image]
features = ["png","jpeg"]
version = "*"

[workspace]
