[package]
name = "uwh-refbox"
version = "0.1.0"
authors = ["Tristan Debrunner <tpwd@me.com>"]
edition = "2021"

[features]
default = []
oldui = ["gdk", "gio", "glib", "gtk"]

[dependencies]
async-std = "1.11.0"
clap = "2.33.0"
embedded-graphics = "0.7.1"
embedded-graphics-simulator = "0.3.0"
env_logger = "0.6.1"
gdk = { version = "0.12.0", optional = true }
gio = { version = "0.8.0", optional = true }
glib = { version = "0.9.1", optional = true }
gtk = { version = "0.8.0", optional = true }
iced = { version = "0.3.0", features = ["async-std"] }
iced_futures = { version = "0.3.0", features = ["async-std"] }
iced_native = "0.3.0"
log = "0.4.6"
paste = "1.0.7"
thiserror = "1.0.11"
toml = "0.5"
uwh-common = { version = "0.1.0", path = "../uwh-common"}
uwh-matrix-drawing = { version = "0.1.0", path = "../uwh-matrix-drawing"}

