[package]
name = "uwh-refbox"
version = "0.1.0"
authors = ["Tristan Debrunner <tpwd@me.com>"]
edition = "2021"

[features]
default = []
debug = ["iced/debug"]

[dependencies]
async-std = "1.11.0"
clap = { version = "3.1", features = ["derive"] }
confy = { git = "https://github.com/rust-cli/confy", rev = "642822413139ce38a96b916190e8c7fd5b88e814" }
derivative = "2.2.0"
embedded-graphics = "0.7.1"
embedded-graphics-simulator = "0.3.0"
env_logger = "0.9.0"
iced = { version = "0.4", features = ["async-std", "svg", "pure"] }
iced_futures = { version = "0.4", features = ["async-std"] }
iced_native = "0.5"
log = "0.4.16"
paste = "1.0.7"
thiserror = "1.0"
toml = "0.5"
uwh-common = { version = "0.1.0", path = "../uwh-common"}
uwh-matrix-drawing = { version = "0.1.0", path = "../uwh-matrix-drawing"}

