[package]
name = "uwh-refbox"
version = "0.1.1"
description = "UI for Atlantis Sports's Underwater Hockey Refbox"
authors = ["Atlantis Sports <maintainers@atlantissports.org>"]
edition = "2021"

[features]
default = []
debug = ["iced/debug"]

[dependencies]
arrayref = "0.3.6"
collect_array = "0.1"
clap = { version = "3.1", features = ["derive"] }
confy = { git = "https://github.com/rust-cli/confy", rev = "642822413139ce38a96b916190e8c7fd5b88e814" }
conquer-once = "0.3"
derivative = "2.2.0"
embedded-graphics = "0.7.1"
env_logger = "0.9.0"
iced = { version = "0.4", features = ["tokio", "svg", "pure", "canvas"] }
iced_futures = { version = "0.4", features = ["async-std"] }
iced_native = "0.5"
log = "0.4.16"
more-asserts = "0.2"
paste = "1.0.7"
reqwest = { version = "0.11", features = ["json"] }
rodio = { version = "0.15", default-features = false }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
skip_error = "3.1"
thiserror = "1.0"
time = { version = "0.3", features = ["local-offset", "macros", "serde", "serde-human-readable"] }
tokio = { version = "1.18", features = ["io-util", "macros", "net", "sync", "time"] }
tokio-serial = "5.4"
toml = "0.5"
uwh-common = { version = "0.1.0", path = "../uwh-common"}
uwh-matrix-drawing = { version = "0.1.0", path = "../uwh-matrix-drawing"}

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[package.metadata.bundle]
identifier = "com.atlantissports.uwhrefbox"
icon = ["resources/AppIcon.png"]