[package]
name = "wireless-remote"
version = "0.3.1"
authors = ["Atlantis Sports <maintainers@atlantissports.org>"]
edition = "2024"
rust-version = "1.85"

[dependencies]
cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7"
crc = "3.3.0"
defmt = "0.3"
defmt-rtt = "0.4"
embassy-executor = { version = "0.7", features = ["arch-cortex-m", "defmt", "executor-thread"] }
embassy-rp = { version = "0.4", features = ["boot2-gd25q64cs", "defmt", "rp2040", "time-driver"] }
embassy-time = { version = "0.4", features = ["defmt", "defmt-timestamp-uptime"] }
embedded-hal = { version = "1.0.0", features = ["defmt-03"] }
embedded-hal-async = { version = "1.0.0", features = ["defmt-03"] }
embedded-hal-bus = { version = "0.2.0", features = ["async", "defmt-03"] }
lora-phy = "3.0.1"
panic-probe = { version = "0.3", features = ["print-defmt"] }
portable-atomic = { version = "1.9.0", features = ["critical-section", "require-cas"] }
wireless-modes = { version = "0.3.1", path = "../wireless-modes" }


[profile.release]
lto = true
opt-level = "s"
incremental = false
codegen-units = 1
# note: debug = true is okay - debuginfo isn't flashed to the device!
debug = true

[profile.dev]
lto = true
