[package]
name = "alphagen"
version = "0.1.0"
edition = "2021"
description = "Used to generate greyscale mask images based on the alpha channel of existing images"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "*"
rayon = "*"

[workspace]
